--- a/package.json
+++ b/package.json
@@ -21,9 +21,19 @@
     "sweetalert2": "^11.7.20"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.9"
+    "babel-jest": "^29.6.2",
+    "cloudinary": "^1.40.0",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "setimmediate": "^1.0.5",
+    "vite": "^2.9.9",
+    "whatwg-fetch": "^3.6.17"
   }
 }
