--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -32,7 +33,6 @@
     "cloudinary": "^1.40.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
-    "setimmediate": "^1.0.5",
     "vite": "^2.9.9",
     "whatwg-fetch": "^3.6.17"
   }
