--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cloudinary": "^1.40.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "setimmediate": "^1.0.5",
     "vite": "^2.9.9",
     "whatwg-fetch": "^3.6.17"
   }
