--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "dotenv": "^16.3.1",
     "firebase": "^9.23.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
